--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,11 @@
 {
   "tasks": {
-    "dev": "deno run --allow-read --allow-write main.ts && deno fmt ."
+    "dev": "deno run src/index.ts && deno fmt ."
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.0"
+    "@std/assert": "jsr:@std/assert@^1.0.0",
+    "@util": "./src/util.ts",
+    "@generators": "./src/generators/index.ts",
+    "@configs": "./src/configs.ts"
   }
 }
