--- a/deno.json
+++ b/deno.json
@@ -8,10 +8,7 @@
     "sharp": "npm:sharp@^0.34.5",
     "@text": "./src/util/text.ts",
     "@color": "./src/util/color.ts",
-    "@sync": "./src/util/sync/sync.ts",
-    "@data": "./src/data/data.ts",
-    "@generators": "./src/generators/generators.ts",
-    "@configs": "./src/configs/configs.ts"
+    "@sync": "./src/util/sync/sync.ts"
   },
   "fmt": {
     "quoteProps": "asNeeded"
