feat: setup basic testing script

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --allow-env --allow-ffi --allow-read=public,dist --allow-write=dist src/index.ts"
+    "build": "deno run --allow-env --allow-ffi --allow-read=public,dist --allow-write=dist src/index.ts",
+    "publish": "cp -R ./dist/* ~/Library/'Application Support'/Hytale/UserData/Saves/'Dev World'/mods/Unified_Materials",
+    "test": "deno run build && deno run publish"
   },
   "imports": {
     "culori": "npm:culori@^4.0.2",
