fix: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dh253/hytale-generators",
+  "name": "hytale-generators",
   "version": "0.1.0",
   "repository": {
     "type": "git",
