--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,26 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
-    "target": "esnext",
-    "lib": ["esnext"],
+    "outDir": "./dist",
+
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+
+    "lib": ["ES2022"],
     "types": ["node"],
+
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": false,
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    "outDir": "./dist",
-    "erasableSyntaxOnly": true,
-    "allowImportingTsExtensions": true,
+
     "declaration": true,
-    "emitDeclarationOnly": true,
-    "declarationMap": true
+    "declarationMap": true,
+
+    "sourceMap": true,
+
+    "verbatimModuleSyntax": true
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
