--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.54.0",
+    "typescript-eslint": "^8.54.0"
+  },
+  "dependencies": {
     "culori": "^4.0.2",
     "sharp": "^0.34.5"
   }
