--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hytale-generators",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dustinheisey/Hytale-Generators.git"
@@ -10,8 +10,8 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.js"
     }
   },
   "description": "",
@@ -25,7 +25,7 @@
     "typecheck": "tsc --noEmit",
     "lint:js": "eslint . -c eslint.config.ts --fix",
     "spellcheck": "cspell lint .",
-    "test": "node src/index.ts",
+    "test": "tsc && node dist/src/index.test.js",
     "build": "tsc"
   },
   "devDependencies": {
@@ -43,6 +43,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
+    "type-fest": "^5.4.4",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.54.0"
   },
