--- a/package.json
+++ b/package.json
@@ -40,9 +40,13 @@
     "typecheck": "tsc --noEmit",
     "lint:js": "eslint . -c eslint.config.ts --fix",
     "spellcheck": "cspell lint .",
-    "test": "tsc && node dist/src/index.test.js",
+    "clear": "rimraf dist",
     "dev": "tsc --watch",
-    "build": "tsc"
+    "dev:clear": "npm run clear && tsc --watch",
+    "test": "tsc && node dist/src/index.test.js",
+    "test:clear": "npm run clear && tsc && node dist/src/index.test.js",
+    "build": "tsc",
+    "build:clear": "npm run clear && tsc"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
@@ -58,6 +62,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
+    "rimraf": "^6.1.3",
     "type-fest": "^5.4.4",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.56.0"
