--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
       "default": "./dist/src/index.js"
     }
   },
+  "_moduleAliases": {
+    "hytale-generators": "./dist/src/index.js"
+  },
   "license": "MIT",
   "author": "Dustin Heisey",
   "type": "module",
@@ -43,8 +46,8 @@
     "clear": "rimraf dist",
     "dev": "tsc --watch",
     "dev:clear": "npm run clear && tsc --watch",
-    "test": "tsc && node dist/src/index.test.js",
-    "test:clear": "npm run clear && tsc && node dist/src/index.test.js",
+    "test": "tsc && node --import module-alias/register dist/src/index.test.js",
+    "test:clear": "npm run clear && tsc && node --import module-alias/register dist/src/index.test.js",
     "build": "tsc",
     "build:clear": "npm run clear && tsc"
   },
@@ -59,6 +62,7 @@
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "module-alias": "^2.3.4",
     "npm-run-all": "^4.1.5",
     "prettier": "3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
