--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "outDir": "./dist",
     "target": "ES2022",
-    "rootDir": ".",
 
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
@@ -20,7 +19,10 @@
     "declarationMap": true,
     "sourceMap": true,
 
-    "verbatimModuleSyntax": false
+    "verbatimModuleSyntax": false,
+    "paths": {
+      "hytale-generators": ["./src/index.js"]
+    }
   },
   "include": ["*.config.ts", "src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
